--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3.0.7", features = ["derive"] }
+derive_more = "0.99.17"
 lalrpop-util = {version="0.19.6",features=["lexer"]}
 regex = "1"
 
