Eeyore codegen completed
YAY!

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": "-f test.eey -m eeyore",
+            "args": "-S -e testcase.c -o testcase.S",
             "cwd": "${workspaceFolder}"
         },
         {
