--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
                 "args": [
                     "build",
                     "--bin=msysypi",
-                    "--package=msysypi"
+                    "--package=msysypi",
+                    "--release"
                 ],
                 "filter": {
                     "name": "msysypi",
