--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "kind": "bin"
                 }
             },
-            "args": "testcase.tigger -o testcase.S",
+            "args": "testcase.eeyore -o testcase.S",
             "cwd": "${workspaceFolder}"
         },
         {
